  * softwarecenter/view/viewswitcher.py:
    - emit 'transactions-changed' signal after connecting to the backend so
      that we display any pending transactions (LP: #652927)
      (see bug report for test case)
  
  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - use keyserver.ubuntu.com on port 80 by default to avoid problems
      on machines that filter the port 11371

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Oct 2010 12:34:38 +0200

software-center (3.0.4) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/appview.py:
    - fix intermittent crash in _set_cursor (LP: #617004)
  
  [ Michael Vogt ]
  * Create the log directory not on the import paths.py. Otherwise
    if the user upgrades using a sudo based tool (like apt-get) he
    may end up with a root owned log (LP: #652151)
  * softwarecenter/paths.py
    - ensure we don't create directories in /home when running as
      root
    - When detecting a not writable cache dir, try to remove it
      so that it gets re-created later with the right permissions.
      That will undo the damage in bug LP: #652151

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Oct 2010 10:40:08 +0200

software-center (3.0.3) maverick; urgency=low

  * softwarecenter/view/softwarepane.py:
    - Fix incorrect hide of the technical items search bar 
      (LP: #646584)
  * softwarecenter/backend/aptd.py, softwarecenter/utils.py:
    - Test if we have a Release.gpg file after a new for-pay repository 
      was added. In the initial update() the backend/libapt does not know
      yet if a signed repo should be expected. If the Release.gpg file
      is missing, re-try the operation. This should fix the 
      "unauthenticated" errors for the ricks-wallpapers purchase
  * softwarecenter/backend/aptd.py:
    - fix crash when the aptdaemon dies
    - improve logging for purchase processing
  * softwarecenter/log.py:
    - improve logging format