@@ -30,7 +30,7 @@ import time
 import threading
 
 from softwarecenter.distro import get_distro
-from softwarecenter.enums import BUY_SOMETHING_HOST
+from softwarecenter.enums import BUY_SOMETHING_HOST, BUY_SOMETHING_HOST_ANONYMOUS
 from softwarecenter.utils import get_current_arch
 
 # possible workaround for bug #599332 is to try to import lazr.restful
@@ -381,7 +381,7 @@ class SoftwareCenterAgentAnonymous(gobject.GObject):
         arch_tag = get_current_arch()
         # the server supports only english for now
         lang = "en"
-        url = BUY_SOMETHING_HOST + "/apps/%(lang)s/ubuntu/%(series)s/%(arch)s" % {
+        url = BUY_SOMETHING_HOST_ANONYMOUS + "/apps/%(lang)s/ubuntu/%(series)s/%(arch)s" % {
             'lang' : lang,
             'series' : series_name,
             'arch' : arch_tag, }
